--- a/index.html
+++ b/index.html
@@ -8,7 +8,45 @@
     <title>Tower of Hanoi</title>
 </head>
 <body>
-    <header>
+    <header><!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="style.css">
+            <title>Tower of Hanoi</title>
+        </head>
+        <body>
+            <header>
+                <h1>TOWER OF HANOI</h1>
+                <div class="stats">
+                <h2>Wins: <span id="wins">0</span></h2>
+                <h2>Moves: <span id="moves">0</span></h2>
+                <h2>Top Score: <span id="topScore">0</span></h2>
+                </div>
+            </header>
+            <main>
+                <div class="square left">
+                    <div class="block one" id="one" data-size="1" data-location="0"></div>
+                    <div class="block two" id="two" data-size="2" data-location="0"></div>
+                    <div class="block three" id="three" data-size="3" data-location="0"></div>
+                    <div class="block four" id="four" data-size="4" data-location="0"></div>
+                    <div class="block five" id="five" data-size="5" data-location="0"></div>
+                </div>
+                <div class="square middle"></div>
+                <div class="square right"></div>
+            </main>
+            <footer>
+                <button id="restart">RESTART</button>
+                <h3>Tower of Hanoi is a mathematical puzzle where we have three rods and n disks. The objective of the puzzle is to move the entire stack to another rod, obeying the following simple rules: 
+                    Only one disk can be moved at a time.
+                    Each move consists of taking the upper disk from one of the stacks and placing it on top of another stack i.e. a disk can only be moved if it is the uppermost disk on a stack.
+                    No disk may be placed on top of a smaller disk.</h2>
+            </footer>
+            <script src="script.js"></script>
+        </body>
+        </html>
         <h1>TOWER OF HADOI</h1>
         <div class="stats">
         <h2>Wins: <span>0</span></h2>
